--- a/Proeject_1/assets/styles/food-style-3.css
+++ b/Proeject_1/assets/styles/food-style-3.css
@@ -2,6 +2,26 @@
   --gap: 30px;
   --number: 1;
 }
+@media only screen and (min-width: 768px) {
+  :root {
+    --number: 2;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  :root {
+    --number: 3;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  :root {
+    --number: 4;
+  }
+}
+@media only screen and (min-width: 1920px) {
+  :root {
+    --number: 5;
+  }
+}
 
 * {
   padding: 0;
@@ -20,6 +40,41 @@ body {
 .wrapper {
   max-width: 1320px;
   margin: auto;
+}
+@media only screen and (max-width: 576px) {
+  .wrapper {
+    max-width: 100%;
+  }
+}
+@media only screen and (min-width: 576px) {
+  .wrapper {
+    max-width: 540px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .wrapper {
+    max-width: 720px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .wrapper {
+    max-width: 960px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .wrapper {
+    max-width: 1140px;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  .wrapper {
+    max-width: 1320px;
+  }
+}
+@media only screen and (min-width: 1920px) {
+  .wrapper {
+    max-width: 1800px;
+  }
 }
 
 .container {
@@ -160,6 +215,16 @@ body {
   background: #F6F6F6;
   position: relative;
   padding: 20px 30px;
+}
+@media only screen and (max-width: 576px) {
+  .section--category .category {
+    width: calc((100% - var(--gap) * (var(--number) - 1)) / var(--number));
+  }
+}
+@media only screen and (min-width: 576px) {
+  .section--category .category {
+    width: calc((100% - var(--gap) * (var(--number) - 1)) / var(--number));
+  }
 }
 .section--category .category__name {
   color: #171717;
@@ -340,55 +405,4 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-}
-
-@media (max-width: 576px) {
-  .wrapper {
-    max-width: 100%;
-  }
-  .section--category .category {
-    width: calc((100% - var(--gap) * (var(--number) - 1)) / var(--number));
-  }
-}
-@media (min-width: 576px) {
-  .wrapper {
-    max-width: 540px;
-  }
-  .section--category .category {
-    width: calc((100% - var(--gap) * (var(--number) - 1)) / var(--number));
-  }
-}
-@media (min-width: 768px) {
-  .wrapper {
-    max-width: 720px;
-  }
-  :root {
-    --number: 2;
-  }
-}
-@media (min-width: 992px) {
-  .wrapper {
-    max-width: 960px;
-  }
-}
-@media (min-width: 1200px) {
-  .wrapper {
-    max-width: 1140px;
-  }
-}
-@media (min-width: 1400px) {
-  .wrapper {
-    max-width: 1320px;
-  }
-  :root {
-    --number: 4;
-  }
-}
-@media (min-width: 1920px) {
-  .wrapper {
-    max-width: 1800px;
-  }
-  :root {
-    --number: 5;
-  }
-}/*# sourceMappingURL=food-style.css.map */
+}/*# sourceMappingURL=food-style-3.css.map */
